--- a/src/admin.html
+++ b/src/admin.html
@@ -15,7 +15,13 @@
     <link rel="icon" href="img/firma.png">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="bg-black">
+    <nav class="navbar navbar-expand-md bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand m-auto px-4" href="home.html">
+                <img src="img/" alt="icono restaurante" width="60" height="auto">
+            </a>
+        </div>
+    </nav>
 </body>
 </html>
