mongodb conectarme y probando

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,8 +12,8 @@
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
     <title>Menú</title>
-    <link rel="icon" href="img/firma.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../public/img/">
+    <link rel="stylesheet" href="../public/styles/style.css">
 </head>
 <body class="bg-black">
     <nav class="navbar navbar-expand-md bg-dark">
