--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -13,15 +13,15 @@
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
     <title>Iniciar Sesión</title>
-    <link rel="icon" href="img/firma.png">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="icon" href="../public/img/"> -->
+    <!-- <link rel="stylesheet" href="../public/styles/style.css"> -->
 </head>
 
-<body class="">
+<body class="bg-black">
     <nav class="navbar navbar-expand-md bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand m-auto px-4" href="home.html">
-                <img src="img/" alt="icono restaurante" width="60" height="auto">
+                <img src="" alt="icono restaurante" width="60" height="auto">
             </a>
         </div>
     </nav>
