--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,14 +13,14 @@
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
     <title>Menú</title>
-    <link rel="icon" href="../public/img/">
-    <link rel="stylesheet" href="../public/styles/style.css">
+    <!-- <link rel="icon" href="../public/img/"> -->
+    <!-- <link rel="stylesheet" href="../public/styles/style.css"> -->
 </head>
 <body class="bg-black">
     <nav class="navbar navbar-expand-md bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand m-auto px-4" href="home.html">
-                <img src="img/" alt="icono restaurante" width="60" height="auto">
+                <img src="" alt="icono restaurante" width="60" height="auto">
             </a>
         </div>
     </nav>
