--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -26,8 +26,8 @@
         </div>
     </nav>
 
-    <div class="m-5 card bg-dark text-light">
-        <form action="" class="m-3">
+    <div class="position-absolute top-50 start-50 translate-middle card bg-dark text-light">
+        <form class="m-3">
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="mb-3 form-control" name="nombre" id="nombre">
@@ -41,6 +41,51 @@
             </div>
         </form>
     </div>
+
+    <section class="h-100 gradient-form" style="background-color: #eee;">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-xl-10">
+                    <div class="card rounded-3 text-white bg-dark">
+                        <div class="row g-0">
+                            <div class="col-lg-6">
+                                <div class="card-body p-md-5 mx-md-4">
+                                    <div class="text-center">
+                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
+                                        style="width: 185px;" alt="logo">
+                                        <h4 class="mt-1 mb-5 pb-1">Portal de Gestión</h4>
+                                    </div>
+                                    <form>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="nombre">Nombre</label>
+                                            <input type="text" id="nombre" name="nombre" class="form-control"
+                                            placeholder="Escribe tu nombre"/>
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            <label class="form-label" for="pass">Contraseña</label>
+                                            <input type="password" id="pass" name="pass" class="form-control"/>
+                                        </div>
+                                        <div class="text-center pt-1 my-5 pb-1">
+                                            <button class="btn btn-danger w-100" type="button">Iniciar Sesión</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 d-flex align-items-center gradient-custom-2 bg-dark">
+                                <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                    <h4 class="mb-4">Accede al apartado de administración </h4>
+                                    <p class="small mb-0">Bienvenido al panel de administración. Acceda con su 
+                                        nombre de usuario y contraseña. Aquí encontrará las herramientas necesarias. 
+                                        Actualice y gestione el contenido del sitio.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
