--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -26,23 +26,7 @@
         </div>
     </nav>
 
-    <div class="position-absolute top-50 start-50 translate-middle card bg-dark text-light">
-        <form class="m-3">
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="mb-3 form-control" name="nombre" id="nombre">
-            </div>
-            <div class="mb-3">
-                <label for="pass" class="form-label">Contraseña</label>
-                <input type="password" class="mb-3 form-control" name="pass" id="pass">
-            </div>
-            <div class="d-grid gap-2 mx-5 mt-4">
-                <input type="button" class="btn btn-danger" value="Inicia Sessión">
-            </div>
-        </form>
-    </div>
-
-    <section class="h-100 gradient-form" style="background-color: #eee;">
+    <section class="h-100 gradient-form p-5">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-xl-10">
@@ -87,6 +71,7 @@
         </div>
     </section>
 
+    <script src="/login.js"></script>
 </body>
 
 </html>
