--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -50,7 +50,7 @@
                                             <input type="password" id="pass" name="pass" class="form-control"/>
                                         </div>
                                         <div class="text-center pt-1 my-5 pb-1">
-                                            <button class="btn btn-danger w-100" type="button">Iniciar Sesión</button>
+                                            <input type="submit" class="btn btn-danger w-100" value="Iniciar Sesión">
                                         </div>
                                     </form>
                                 </div>
