--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -24,5 +24,10 @@
             </a>
         </div>
     </nav>
+
+    <div id="listaMenu"></div>
+
+    <script src="/login.js"></script>
+
 </body>
 </html>
