--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -13,15 +13,16 @@
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
     <title>Iniciar Sesión</title>
-    <!-- <link rel="icon" href="../public/img/"> -->
-    <!-- <link rel="stylesheet" href="../public/styles/style.css"> -->
+    <link rel="icon" href="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body class="bg-black">
     <nav class="navbar navbar-expand-md bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand m-auto px-4" href="home.html">
-                <img src="" alt="icono restaurante" width="60" height="auto">
+            <a class="navbar-brand m-auto px-4" href="index.handlebars">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
+                style="width: 60px;" alt="logo">
             </a>
         </div>
     </nav>
