--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/27fe5071b6.js" crossorigin="anonymous"></script>
 
     <title>Iniciar Sesión</title>
-    <link rel="icon" href="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp">
+    <link rel="icon" href="/img/lotus.webp">
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 
@@ -21,8 +21,7 @@
     <nav class="navbar navbar-expand-md bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand m-auto px-4" href="index.handlebars">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
-                style="width: 60px;" alt="logo">
+                <img src="/img/lotus.webp" style="width: 60px;" alt="logo">
             </a>
         </div>
     </nav>
@@ -36,8 +35,7 @@
                             <div class="col-lg-6">
                                 <div class="card-body p-md-5 mx-md-4">
                                     <div class="text-center">
-                                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp" 
-                                        style="width: 185px;" alt="logo">
+                                        <img src="/img/lotus.webp" style="width: 185px;" alt="logo">
                                         <h4 class="mt-1 mb-5 pb-1">Portal de Gestión</h4>
                                     </div>
                                     <form>
