--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -20,7 +20,7 @@
 <body class="bg-black">
     <nav class="navbar navbar-expand-md bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand m-auto px-4" href="index.handlebars">
+            <a class="navbar-brand m-auto px-4" href="/">
                 <img src="/img/lotus.webp" style="width: 60px;" alt="logo">
             </a>
         </div>
