--- a/frontend/src/home.html
+++ b/frontend/src/home.html
@@ -26,8 +26,8 @@
         </div>
     </nav>
 
-    <div>
-        <a href="/menu" class="btn btn-"></a>
+    <div class="d-flex justify-content-center">
+        <a href="/menu" class="m-5 btn btn-danger">Menú</a>
     </div>
 
     <footer class="fixed-bottom p-4 border-0 bg-dark">
