--- a/frontend/src/home.html
+++ b/frontend/src/home.html
@@ -15,6 +15,7 @@
     <title>Inicio</title>
     <link rel="icon" href="/img/lotus.webp">
     <link rel="stylesheet" href="/styles/style.css">
+
 </head>
 
 <body class="bg-black">
@@ -26,8 +27,8 @@
         </div>
     </nav>
 
-    <div class="d-flex justify-content-center">
-        <a href="/menu" class="m-5 btn btn-danger">Menú</a>
+    <div id="home">
+        <a href="/menu" class="btn btn-danger btn-lg mx-auto mb-5">Menú</a>
     </div>
 
     <footer class="fixed-bottom p-4 border-0 bg-dark">
